restrict sync to css only

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
 	"private": true,
 	"scripts": {
 		"watch_copyfiles": "nodemon -e css,html --watch src/siteroot/* --exec \"yarn copyfiles\"",
-		"cleanwhatever": "rimraf whatevedestinationrfolder",
-		"copyfiles": "copyfiles -u 2 \"./src/siteroot/**/*.{css,html}\" \"siteroot/\"",
+		"copyfiles": "copyfiles -u 2 \"./src/siteroot/**/*.{css}\" \"siteroot/\"",
 		"backupscss": "copyfiles siteroot/**/*.scss src/",
 		"sass:watch": "sass --watch src/",
 		"hs:watch": "hs watch siteroot siteroot",
+		"hs:clean": "rimraf siteroot",
+		"hs:fetch": "hs fetch siteroot siteroot --overwrite",
 		"watch": "concurrently \"yarn sass:watch\" \"yarn watch_copyfiles\" \"yarn hs:watch\""
 	},
 	"devDependencies": {
